tui-markdown/src/renderer/snapshots/tui_markdown__renderer__blockquote__tests__blockquote__nested.snap
---
source: tui-markdown/src/renderer/blockquote.rs
expression: |-
  from_str(indoc!
  {"
                  > Blockquote 1
                  >> Nested Blockquote
              "})
---
Text::from_iter([
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("Blockquote 1"),
    ]).green(),
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
    ]).green(),
    Line::from_iter([
        Span::from(">"),
        Span::from(">"),
        Span::from(" "),
        Span::from("Nested Blockquote"),
    ]).green(),
])
